colored social icons

--- a/style.css
+++ b/style.css
@@ -49,3 +49,43 @@ input.sameline{
 .round{
 	border-radius: 25px;
 }
+a.tw{
+	background-color: #FFF ;
+	color: #4490FF;
+}
+a.fb{
+	background-color: #FFF ;
+	color: #3b5998;
+}
+a.ln{
+	background-color: #FFF ;
+	color: #0077B5;
+}
+a.wb{
+	background-color: #00A0DC ;
+	color: #FFF;
+	padding: 0px 2px 0px 2px;
+}
+a.go{
+	background-color: #FFF ;
+	color: #d9534f;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
