--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h4.background {
    
    width: 100%; 
    text-align: left; 
-   border-bottom: 2px solid #28a6ec; 
+   border-bottom: 2px solid #093884; 
    line-height: 0.1em;
    margin: 10px 0 20px; 
    padding-top: 10px;
@@ -35,7 +35,7 @@ input.sameline{
 	
 }
 .input-group{
-	margin-top: 10px;
+	margin: 10px 0;
 }
 .toggle{
 	float:right;
@@ -68,6 +68,140 @@ a.go{
 input[type="text"]{
 	font-size:12px;
 }
-
-
-
+.nav-tabs{
+  border-bottom: 4px solid transparent;
+  padding-bottom: 10px;
+}
+.nav li, 
+.nav-tabs>li>a{
+  border: none;
+}
+.nav-tabs>li.active>a, 
+.nav-tabs>li.active>a:focus, 
+.nav-tabs>li.active>a:hover,
+.nav-tabs.nav-justified>.active>a, 
+.nav-tabs.nav-justified>.active>a:focus, 
+.nav-tabs.nav-justified>.active>a:hover,
+.nav-tabs.nav-justified>.active>a, 
+.nav-tabs.nav-justified>.active>a:focus, 
+.nav-tabs.nav-justified>.active>a:hover,
+.nav-tabs.nav-justified>li>a{
+  border: none;
+  background-color: transparent;
+}
+.nav-tabs>li.active>a, 
+.nav-tabs>li.active>a:focus, 
+.nav-tabs>li.active>a:hover,
+.nav-tabs.nav-justified>.active>a{
+  color: #093884;
+}
+.nav-tabs>li>a:hover{
+  border: none;
+  color: #093884;
+  background-color: transparent;
+}
+.nav-tabs>li{
+  border-bottom: 1px solid #8dacdd;
+}
+.nav-tabs>.active{
+  border-bottom: 3px solid #093884;
+  
+}
+.nav-tabs>.active a{
+  font-weight: 400;
+}
+.nav li a{
+  font-family: 'Titillium Web';
+  font-weight: 300;
+  font-size: 18px;
+  color: #8dacdd;
+}
+.input-group-btn:last-child>.btn, 
+.input-group-btn:last-child>.btn-group{
+  margin-left: -18px;
+}
+.input-group .form-control:focus{
+  z-index: 1;
+}
+.input-group .form-control:first-child{
+  border-right: none;
+}
+.btn-circle{
+  color: #fff;
+  background-color: #093884;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  border-radius: 50%;  
+  border-color: transparent;
+  padding: 7px 0;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 12px rgba(0, 0, 0, 0.5);
+  transition: box-shadow 0.3s;
+  -webkit-transition: box-shadow 0.3s;
+}
+.btn-circle:hover,
+.btn-cirlce:active,
+.btn-circle:focus,
+.btn-primary:active:focus, 
+.btn-primary:active:hover{
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0, 0, 0, 0.5);
+  background-color: #093884;
+  border: none;
+  transition: box-shadow 0.3s;
+  -webkit-transition: box-shadow 0.3s;
+  outline:none;
+}
+.form-control:focus{
+  border-color: #093884;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+}
+#controls .form-control{
+  height: 35px;
+  background: #fff;
+}
+.input-group-btn:last-child>.btn{
+  border-radius: 50%;
+}
+.normal-text{
+  font-family: 'Roboto';
+  font-weight: 300;
+  color: #1f1f1f;
+  font-size: 15px;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+.checkbox input{
+  display: none;
+}
+.cust-checkbox{
+  margin-left: -20px;
+}
+.cust-checkbox:before{
+  font-family: "FontAwesome";
+  content: "\f10c";
+  color: #093884;
+  display: inline-block;
+  margin-right: 5px;
+  -webkit-font-smoothing: antialiased; 
+  font-size: 17px;
+  vertical-align: middle;
+}
+input[type="checkbox"]:checked + .cust-checkbox:before {
+  content: "\f058";
+  animation: tick 0.2s ease-in-out;
+}
+input[disabled] + .cust-checkbox:before,
+input[disabled] + .cust-checkbox .normal-text{
+  color: #b1b1b1;
+}
+@keyframes tick{
+  from{
+    transform: scale(0);
+  }
+  to{
+    transform: scale(1);
+  }
+}
