--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body{
 	font-size:12px;
 	line-height: 2em;
+  font-family: 'Roboto';
+  font-size: 13px;
+}
+h1, h2, h3, h4, h5, h6{
+  font-family: 'Titillium Web';
 }
 #map {
 	height: 100%;
@@ -9,24 +14,11 @@ body{
 	margin: 0px;
 	position: fixed !important;
 }
-
-h4.background {
-   
-   width: 100%; 
-   text-align: left; 
-   border-bottom: 2px solid #093884; 
-   line-height: 0.1em;
-   margin: 10px 0 20px; 
-   padding-top: 10px;
-} 
+hr{
+  border-top-color: #f5f5f5;
+}
 h4.small{
 	width: 70% !important;
-}
-
-h4 span { 
-	background:#fff; 
-	padding:0 10px; 
-	font-size: 14px;
 }
 .share{
 	font-size: 20px;
@@ -135,21 +127,31 @@ input[type="text"]{
   border-radius: 50%;  
   border-color: transparent;
   padding: 7px 0;
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 12px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 10px rgba(0, 0, 0, 0.5);
   transition: box-shadow 0.3s;
   -webkit-transition: box-shadow 0.3s;
 }
 .btn-circle:hover,
 .btn-cirlce:active,
-.btn-circle:focus,
-.btn-primary:active:focus, 
 .btn-primary:active:hover{
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 5px rgba(0, 0, 0, 0.5);
   background-color: #093884;
   border: none;
   transition: box-shadow 0.3s;
   -webkit-transition: box-shadow 0.3s;
+}
+.btn-primary[disabled]:hover{
+  background-color: #093884;
+  box-shadow: none;
+}
+.btn-circle:focus,
+.btn-primary:active:focus{
+  background-color: #093884;
+  border: none;
   outline:none;
+}
+.btn-circle[disabled]:hover{
+  
 }
 .form-control:focus{
   border-color: #093884;
@@ -163,40 +165,62 @@ input[type="text"]{
 .input-group-btn:last-child>.btn{
   border-radius: 50%;
 }
-.normal-text{
+.checkbox-text, .radio-text{
   font-family: 'Roboto';
   font-weight: 300;
   color: #1f1f1f;
-  font-size: 15px;
+  font-size: 14px;
+}
+.checkbox-text, .heading, .radio-text{
   -moz-user-select: none;
   -khtml-user-select: none;
   -webkit-user-select: none;
   user-select: none;
 }
-.checkbox input{
+.checkbox input, .radio input{
   display: none;
 }
-.cust-checkbox{
+.checkbox-text, .radio-text{
   margin-left: -20px;
 }
-.cust-checkbox:before{
+.checkbox-text:before, .radio-text:before{
+  font-family: "FontAwesome";
+  color: #093884;
+  display: inline-block;
+  margin-right: 3px;
+  -webkit-font-smoothing: antialiased; 
+  font-size: 14px;
+  vertical-align: top;
+}
+.checkbox-text:before{
+  content: "\f096";
+  max-width: 10px;
+}
+.radio-text{
+  font-size: 14px;
+  font-weight: 300;
+}
+.radio-text:before{
   font-family: "FontAwesome";
   content: "\f10c";
   color: #093884;
-  display: inline-block;
-  margin-right: 5px;
-  -webkit-font-smoothing: antialiased; 
-  font-size: 17px;
-  vertical-align: middle;
 }
-input[type="checkbox"]:checked + .cust-checkbox:before {
-  content: "\f058";
+input[type="checkbox"]:checked + .checkbox-text:before {
+  content: "\f046";
   animation: tick 0.2s ease-in-out;
 }
-input[disabled] + .cust-checkbox:before,
-input[disabled] + .cust-checkbox .normal-text{
-  color: #b1b1b1;
+input[type="radio"]:checked + .radio-text:before {
+  content: "\f192";
+  animation: tick 0.2s ease-in-out;
 }
+input[disabled] + .checkbox-text:before,
+input[disabled] + .checkbox-text,
+input[disabled] + .radio-text:before,
+input[disabled] + .radio-text{
+  color: #b1b1b1;
+  cursor: not-allowed;
+}
+
 @keyframes tick{
   from{
     transform: scale(0);
@@ -204,4 +228,29 @@ input[disabled] + .cust-checkbox .normal-text{
   to{
     transform: scale(1);
   }
+}
+.space-hr{
+  border-top-color: #fff;
+  margin: 15px 0;
+}
+.heading{
+  font-size: 18px;
+  color: #093884;
+}
+.heading-line{
+  margin: 10px 0;
+  width: 55%;
+  border-top: 2px solid #093884;;
+}
+.heading span{
+  border: 1px solid #093884;
+  border-radius: 10px;
+  padding:  0 10px;
+  cursor: default;
+}
+.heading hr{
+  width: 40%;
+  display: inline-block;
+  border-top-color: #093884;
+  margin: 6px 0;
 }
